# opengl-cpp-setup

./: .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
resources/: color.vert
src/: main.cpp
src/common/: shader.cpp
